--- a/1장 요약.md
+++ b/1장 요약.md
@@ -16,6 +16,7 @@
 
 책 정보 깃허브 주소  
 https://github.com/WegraLee/Refactoring  
+
 코드 샘플 깃허브 주소  
 https://github.com/wickedwukong/martin-fowler-refactoring-2nd  
 
@@ -67,21 +68,23 @@ https://github.com/wickedwukong/martin-fowler-refactoring-2nd
 
 - 반복문을 파이프라인으로 바꾸기 - for문 -> reduce()로 변경
   
-  //for문  
-  for(let perf of data.performances) {
-    result += `  ${play.name}: ${format(thisAmount/100)} (${perf.audience}석)\n`;
-  }
+  ```
+  // for문  
+  for(let perf of data.performances) {  
+    result += `  ${play.name}: ${format(thisAmount/100)} (${perf.audience}석)\n`;  
+  }  
 
-  //reduce문  
+  // reduce문  
   data.performances.reduce((total, p) => total + p.amount, 0);
 
-  가장 대표적인 reduce 사용 방법은 Array내 원소의 누적 합을 구하는 것이다.
-    const arr = [1, 2, 3, 4, 5];
-    const result = arr.reduce((acc, cur) => {
-    return acc + cur;
-    }, 0)
-    console.log(result) // 15
-
+  가장 대표적인 reduce 사용 방법은 Array내 원소의 누적 합을 구하는 것이다.  
+  const arr = [1, 2, 3, 4, 5];  
+  const result = arr.reduce((acc, cur) => { 
+    return acc + cur;  
+  }, 0);
+  console.log(result); // 15  
+  ```
+  
 모듈화를 통하여 계산 로직과 출력 로직을 분리 -> 리펙터링을 통해 코드 베이스를 건강하게 만든다는 것
 
 다형성 활용한 계산 코드 재구성
