--- a/2장 요약.md
+++ b/2장 요약.md
@@ -126,4 +126,4 @@
 ### 리펙터링은 개발 기간을 단축하고자 하는 것이다. 기능 추가 시간을 줄이고, 버그 수정 시간을 줄여준다.  
 ### 스스로 그렇게 인식하는데 그치지 말고 다른 사람과 대화할 때도 이 점을 명심해야 한다.  
 ### 리펙터링하도록 이끄는 동력은 어디까지나 경제적인 효과에 있다.  
-### 이를 명확히 이해하는 개발자, 관리자, 고객이 많아질수록 좋은 설계 곡선(시간 대비 기능 추가 속도 높음)을 자주 경험하게 될 것이다.
+### 이를 명확히 이해하는 개발자, 관리자, 고객이 많아질수록 좋은 설계 곡선(시간 대비 기능 추가 속도 높음)을 더 많이 경험하게 될 것이다.
