이미지 경로 수정

--- a/6장 요약.md
+++ b/6장 요약.md
@@ -275,7 +275,7 @@ class Order {
 ```
 
 ## 6.7 변수 이름 바꾸기(Rename Variable)
-![img.png](img.png)
+![img.png](img/img.png)
 ### 배경
 - 변수는 프로그래머가 하려는 일에 관해 많은 것을 설명해주나 이는 이름을 잘 지었을 때만 해당함
 - 이름을 잘못 짓는 경우
@@ -349,7 +349,7 @@ cpyNm = companyName;
 ```
 
 ## 6.8 매개변수 객체 만들기(Introduce Parameter Object)
-![img_1.png](img_1.png)
+![img_1.png](img/img_1.png)
 ### 배경
 - 데이터가 여러 함수로 함께 몰려다니는 경우 여러 데이터 구조 하나로 모아줄 필요가 있다
 
