8장 초안 추가

--- a/7장 요약.md
+++ b/7장 요약.md
@@ -179,7 +179,7 @@ class Priority {
 }
 // 클라이언트
 highPriorityCount = orders.filter(
-  (o) => "high" === o.priority.higherThan(new Priority("normal"))
+  (o) => o.priority.higherThan(new Priority("normal"))
 ).length;
 ```
 ***
