--- a/8장 요약.md
+++ b/8장 요약.md
@@ -45,6 +45,7 @@
 
 ### 예시
 ```javascript
+// 전체 급여와 가장 어린 나이를 계산하는 코드
 function report(people) {
   let youngest = people[0] ? people[0].age : Infinity;
   let totalSalary = 0;
@@ -102,6 +103,17 @@ function totalSalary(people) {
   return people.reduce((total, p) => total + p.salary, 0);
 }
 
+// 배열의 모든 값 합산
+const sum = [0, 1, 2, 3].reduce(function (accumulator, currentValue, currentIndex, array) {
+  return accumulator + currentValue;
+}, 0);
+// sum is 6
+
+// 화살표 함수로도 작성할 수 있습니다.
+const total = [ 0, 1, 2, 3 ].reduce(
+( accumulator, currentValue ) => accumulator + currentValue, 0
+);
+
 function report(people) {
   return `youngestAge: ${youngestAge(people)}, totalSalary: ${totalSalary(people)}`;
 }
@@ -131,8 +143,7 @@ module.exports = {report}
 
 ### 예시
 ```javascript
-// 다음 함수는 인도에 자리한 사무실을 찾아서 도시명과 전화번호를 반환한다.
-
+// 다음 함수는 인도(India)에 자리한 사무실을 찾아서 도시명과 전화번호를 반환한다.
 function acquireData(input) {
   const lines = input.split("\n");
   let firstLine = true;
