--- a/8장 요약.md
+++ b/8장 요약.md
@@ -103,23 +103,9 @@ function totalSalary(people) {
   return people.reduce((total, p) => total + p.salary, 0);
 }
 
-// 배열의 모든 값 합산
-const sum = [0, 1, 2, 3].reduce(function (accumulator, currentValue, currentIndex, array) {
-  return accumulator + currentValue;
-}, 0);
-// sum is 6
-
-// 화살표 함수로도 작성할 수 있습니다.
-const total = [ 0, 1, 2, 3 ].reduce(
-( accumulator, currentValue ) => accumulator + currentValue, 0
-);
-
-function report(people) {
-  return `youngestAge: ${youngestAge(people)}, totalSalary: ${totalSalary(people)}`;
-}
-
 module.exports = {report}
 ```
+[reduce()](https://velog.io/@lemuel0525/%ED%95%A8%EC%88%98-reduce)
 ***
 ## 8.8 반복문을 파이프라인으로 바꾸기(Replace Loop with Pipeline)
 ![img.png](img/img_6.png)
