--- a/8장 요약.md
+++ b/8장 요약.md
@@ -270,3 +270,5 @@ module.exports = {acquireData}
 ### 효과
 - 죽은 코드 임에도 코드가 남아있으면 운 나쁜 프로그래머가 이 코드의 동작을 이해하려고 한다거나 
 - 코드를 수정했는데도 기대한 결과가 나오지 않는 이유를 파악하기 위해 시간을 허비하는 상황을 막을 수 있다.
+
+>[[git] 과거로 갔다가 돌아 오기 (특정 리비전으로 갔다가 되돌아 오기)](https://mytory.net/archives/10078)
