--- a/8장 요약.md
+++ b/8장 요약.md
@@ -128,6 +128,7 @@ module.exports = {report}
 - 논리를 파이프라인으로 표현하면 이해하기 훨씬 쉬워진다.
 
 ### 예시
+![img.png](img/img_8.png)
 ```javascript
 // 다음 함수는 인도(India)에 자리한 사무실을 찾아서 도시명과 전화번호를 반환한다.
 function acquireData(input) {
