--- a/8장 요약.md
+++ b/8장 요약.md
@@ -1,6 +1,6 @@
 # chapter 8 기능 이동
 ***
-- 지금까지(6~7장) 프로그램 요소를 생성 혹은 제거하거나 이름을 변경하는 리팩터링
+- 지금까지(6~7장)은 프로그램 요소를 생성 혹은 제거하거나 이름을 변경하는 리팩터링
 - 8장 => 다른 요소를 다른 컨텍스트(클래스나 모듈 등)로 옮기는 일
     - 함수 옮기기(8.1)
     - 필드 옮기기(8.2)
